--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         <h1>Minha Lista de Tarefas</h1>
         <p id = funcionamento>Clique duas vezes em um item para marcá-lo como completo</p>
     </header>
+    <section id = imput>
+        <input type="text" id = texto-tarefa>
+    </section>
+    <section id = lista>
+        <ol id = lista-tarefas>
+
+        </ol>
+    </section>
     
 </body>
 </html>
