--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         <ol id = lista-tarefas>
 
         </ol>
+        <button id = criar-tarefa>
+            Adicionar
+        </button>
     </section>
-    
+			<script src="script.js"></script>
 </body>
 </html>
