--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Minha Lista de Tarefas</h1>
         <p id = funcionamento>Clique duas vezes em um item para marcá-lo como completo</p>
     </header>
-    <section id = imput>
+    <section id = input>
         <input type="text" id = texto-tarefa>
     </section>
     <section id = lista>
