--- a/index.html
+++ b/index.html
@@ -14,15 +14,22 @@
     </header>
     <section id = input>
         <input type="text" id = texto-tarefa>
+				<button id = criar-tarefa>
+					Adicionar
+			</button>
     </section>
     <section id = lista>
         <ol id = lista-tarefas>
-
         </ol>
-        <button id = criar-tarefa>
-            Adicionar
-        </button>
     </section>
+		<section id = buttons>
+			<button class = button >X</button>
+			<button class = button>CIMA</button>
+			<button class = button>BAIXO</button>
+			<button class = button id = remover-finalizados>Limpar Completos</button>
+			<button class = button id = apaga-tudo>Limpar Lista</button>
+			<button class = button>Salvar Lista</button>
+		</section>
 			<script src="script.js"></script>
 </body>
 </html>
