--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ol>
     </section>
 		<section id = buttons>
-			<button class = button >X</button>
+			<button class = button id = remover-selecionado>X</button>
 			<button class = button>CIMA</button>
 			<button class = button>BAIXO</button>
 			<button class = button id = remover-finalizados>Limpar Completos</button>
