--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </section>
 		<section id = buttons>
 			<button class = button id = remover-selecionado>X</button>
-			<button class = button>CIMA</button>
-			<button class = button>BAIXO</button>
+			<button class = button id = mover-cima>CIMA</button>
+			<button class = button id = mover-baixo>BAIXO</button>
 			<button class = button id = remover-finalizados>Limpar Completos</button>
 			<button class = button id = apaga-tudo>Limpar Lista</button>
 			<button class = button>Salvar Lista</button>
